# rouge-like

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  pdcurses.lib
include/: bottle.h  creature.h  game.h  gameObject.h  item.h  key.h  mainmap.h  mankind.h  map.h  monster.h  player.h  rouge-like.h  weapons.h
include/curses/: curses.h
src/: bottle.cpp  creature.cpp  game.cpp  item.cpp  key.cpp  mainmap.cpp  mankind.cpp  map.cpp  monster.cpp  player.cpp  rouge-like.cpp  ui.cpp  weapons.cpp
